# FEA

./: .gitignore  Cargo.toml  README.md  index.html  wasm.js
fea/: Cargo.toml
fea/src/: main.rs
src/: main.rs
src/lib/: matrix.rs  member.rs  mod.rs  structure.rs
