[package]
name = "fea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.12", features = ["js"] }
clap = {version = "4.5.1", features = ["cargo"]}
rand = "0.8.4"
wasm-pack = "0.12.1"
wasm-bindgen = "0.2.91"
